# event-logger

./: Cargo.toml  foo2
benches/: event_log_benchmark.rs
src/: constants.rs  lib.rs
src/domain/: event.rs  event_type.rs  mod.rs
src/repository/: event_repository_impl.rs  event_repository_mapper.rs  mod.rs  persistence_event.rs
src/service/: event_log_impl.rs  event_type_registry_impl.rs  event_validator.rs  mod.rs
src/utils/: mod.rs  string_padder.rs
