[package]
name = "event_logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
unchecked_unwrap = "3.0.0"

[[bench]]
name = "event_log_benchmark"
harness = false
